fixed overflow error for small screens

--- a/src/containers/whatGPT3/whatGPT3.css
+++ b/src/containers/whatGPT3/whatGPT3.css
@@ -98,6 +98,11 @@
 
 @media screen and (max-width: 650px) {
 
+    .gpt3__whatgpt3 {
+        margin: 2rem;
+        padding: 2rem;
+    }
+
     .gpt3__whatgpt3-feature .gpt3__features-container__feature {
         flex-direction: column;
     }
@@ -113,6 +118,11 @@
 }
 
 @media screen and (max-width: 350px) {
+
+    .gpt3__whatgpt3 {
+        margin: 2rem;
+        padding: 1rem;
+    }
 
     .gpt3__whatgpt3-container .gpt3__features-container__feature {
         margin: 1rem 0;
